Invitation system: email sending left

--- a/app/views/shared/_admin_pane.html.haml
+++ b/app/views/shared/_admin_pane.html.haml
@@ -22,6 +22,7 @@
         %li= link_to  'Статистика', root_url
         
       %ul.category-items
+        %li= link_to 'Приглашения', root_url
         %li= link_to  'Рассылки', root_url
         %li= link_to  'Члены команды', root_url
         %li.new= link_to  'Баннеры', root_url
