--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -31,13 +31,14 @@
         %li Настройки
       - else
         %li= link_to 'Настройки', profile_settings_user_path(current_user)
-      %li= link_to_unless_current 'Пригласить друзей', new_invite_path
+      - if current_user.invites_limit > 0
+        %li= link_to_unless_current 'Пригласить друзей', new_invite_path
       %li= link_to 'Выйти', sign_out_path, :method => :delete
   - else
     %ul.login-links
-      %li
+      %li.signing
         = link_to 'Вход', "#", :onclick => "bubble.show('remote:/wizard/login.js', { event: event, bg: 'white', from: this, message: 'Загружаем...' });  return false;"
-      %li
+      %li.signing
         = link_to 'Регистрация', sign_up_path
         
   - if can? :create, Post
