--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -18,13 +18,19 @@
       %strong О себе
       %p
         = @post.user.about
-    %hr/
-    
-  - unless @post.user.contacts.empty?
+
+    %hr/ 
     .accounts
-      %strong Аккаунты
       %ul.list
         
+        - unless @post.user.homepage.empty?
+          %li.item
+            .profile.homepage
+              %i.icon
+              .service Сайт
+              %a.id{:href => @post.user.homepage_link}
+                = @post.user.homepage
+                
         - unless @post.user.facebook.empty?
           %li.item
             .profile.facebook
@@ -32,6 +38,62 @@
               .service Facebook
               %a.id{:href => @post.user.facebook_link}
                 = @post.user.facebook
+                
+        - unless @post.user.flickr.empty?
+          %li.item
+            .profile.flickr
+              %i.icon
+              .service Flickr
+              %a.id{:href => @post.user.flickr_link}
+                = @post.user.flickr
+                
+        - unless @post.user.formspring.empty?
+          %li.item
+            .profile.formspring
+              %i.icon
+              .service Formspring
+              %a.id{:href => @post.user.formspring_link}
+                = @post.user.formspring
+                
+        - unless @post.user.icq.empty?
+          %li.item
+            .profile.icq
+              %i.icon
+              .service ICQ
+              %a.id{:href => @post.user.icq_link}
+                = @post.user.icq
+                
+        - unless @post.user.lastfm.empty?
+          %li.item
+            .profile.lastfm
+              %i.icon
+              .service Last.fm
+              %a.id{:href => @post.user.lastfm_link}
+                = @post.user.lastfm
+                
+        - unless @post.user.livejournal.empty?
+          %li.item
+            .profile.livejournal
+              %i.icon
+              .service LiveJouranl
+              %a.id{:href => @post.user.livejournal_link}
+                = @post.user.livejournal
+                
+        - unless @post.user.skype.empty?
+          %li.item
+            .profile.skype
+              %i.icon
+              .service Skype
+              %a.id{:href => @post.user.skype_link}
+                = @post.user.skype
+        
+        - unless @post.user.tumblr.empty?
+          %li.item
+            .profile.tumblr
+              %i.icon
+              .service Tumblr
+              %a.id{:href => @post.user.tumblr_link}
+                = @post.user.tumblr
               
         - unless @post.user.twitter.empty?
           %li.item
@@ -40,3 +102,19 @@
               .service Twitter
               %a.id{:href => @post.user.twitter_link}
                 = @post.user.twitter
+                
+        - unless @post.user.vkontakte.empty?
+          %li.item
+            .profile.vkontakte
+              %i.icon
+              .service ВКонтакте
+              %a.id{:href => @post.user.vkontakte_link}
+                = @post.user.vkontakte
+                
+        - unless @post.user.youtube.empty?
+          %li.item
+            .profile.youtube
+              %i.icon
+              .service YouTube
+              %a.id{:href => @post.user.youtube_link}
+                = @post.user.youtube
