--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -614,11 +614,75 @@ body {
     zoom: 1;
 }
 
+.l-column { float: left; }
+.l-column-right { float: right; }
+
+.p-post .l-column-full {
+	width: 570px;
+}
+
+.p-post .l-column-right {
+	width: 150px;
+}
+
+.clear {
+	clear: both;
+}
+
+.p-post-header {
+	padding-bottom: 20px;	
+	border-bottom: 1px #d6d6d6 solid;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+
+.p-post-header h1 {
+	font-size: 1.75em;
+    margin: 0px 0px 4px 0px !important;
+}
+
+.p-post-header .p-post-date {
+	/* background-color: #f7eec6; */
+	display: block;
+	font: normal normal normal 12px/normal Helvetica, Arial, sans-serif;
+	margin: 0px 0px 5px 0px !important;
+}
+
+.p-post-picture {
+	position: relative;
+}
+
+.p-post-picture .p-post-picture-author {
+	float: right;
+	padding-right: 10px;
+	margin-top: 5px;
+	font: normal normal italic 11px/14px Georgia, serif;
+}
+
+.p-post-song {
+	margin: 30px 0;
+}
+
+.p-post-quote {
+	font: normal normal normal 12px/14px 'Courier New', Courier, serif; 
+	margin-bottom: 20px;
+}
+
+
+.p-post-header,
+.p-post-picture,
+.p-post-song,
+.p-post-quote,
+.p-post .b-share {
+	padding-left: 10px;
+}
+
 .column-full { width: 970px; }
 
 .column-x1 { width: 170px; }
 .column-x2 { width: 250px; }
 .column-x3 { width: 550px; }
+.column-x4 { width: 720px; }
 
 .column2-x1 { width: 255px; text-align: right; }
 .column2-x2 { width: 705px; margin-right: 10px; }
