--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -4,16 +4,11 @@
       = f.input :title, :label => 'Заголовок'
       = char_counter_for 'post_title', 100  
       = f.input :conversation, :label => 'Диалог'
-      %hr/
-      
-      = f.input :note, :as => :string, :label => 'Примечание', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
-      = char_counter_for 'post_note', 200
-      = f.input :place, :label => 'Место', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
       
       = submit_button "Сохранить"
       
     .column.column-f-x1
-      - if can? :assgn_featured, @post      
+      - if can? :assign_featured, @post      
         = f.input :featured, :label => 'Фичер', :hint => 'Будет на главной странице до тех пор, пока его место не займет другой.'
         %hr/
         
