--- a/app/views/users/edit_account.html.haml
+++ b/app/views/users/edit_account.html.haml
@@ -1,7 +1,7 @@
 - title "Настройки аккаунта"
 
 %h1.form Настройки
-%span.head-note.block-inline Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+%span.head-note.block-inline 
 .b-settings-menu
   %ul
     %li
