--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -4,6 +4,33 @@
       = f.input :title, :label => 'Заголовок'
       = char_counter_for 'post_title', 100  
       = f.input :conversation, :label => 'Диалог'
+      .b-formatting-hints#formattingHints       
+        .g-left
+          %div
+            %h4
+              %p Заголовок
+              %p ----------------
+          %div
+            %strong **Жирный**
+          %div
+            %em *Курсив*
+          %div
+            [Ссылка](
+            = link_to 'http://t-a-l-k-s.com', 'http://t-a-l-k-s.com'
+            )
+                        
+        .g-right
+          %div
+            %blockauote
+              %p > цитата
+              %p > в несколько
+              %p > строк
+          %div
+            * список
+            %br
+            * каких-нибудь
+            %br
+            * строк
       
       = submit_button "Сохранить"
       
@@ -29,5 +56,4 @@
       = f.input :picture_author_link, :as => :url, :label => 'Ссылка на автора изображения'
       %hr/
       
-      = f.input :song_title, :label => 'Название песни', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
-      = f.input :song_link, :label => 'Ссылка на песню', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
+      = f.input :song_code, :label => 'Песня', :hint => t('post.song_code_hint')
