--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,15 +1,24 @@
-﻿%table
-  %tr
-    %th Title
-    %th Body
-    %th
-    %th
-    %th
-- @posts.each do |post|
-  %tr
-    %td= link_to post.title, post
-    %td= post.conversation
-    - if can? :update, Post
-      %td= link_to 'Edit', edit_post_path(post)
-    - if can? :destroy, @post
-      %td= link_to 'Destroy', post, :confirm => 'Вы уверены?', :method => :delete
+﻿.columns
+  .column.column-x2
+    = render '/shared/sidebar'
+    
+  .column.column-x4
+    
+    .posts
+      .header
+        %h3 
+          Все параграфы пользователя
+          %strong
+            = @posts.first.user.username
+      - @posts.each do |post|
+        .postPreview
+          .image
+            = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
+          .text
+            .header
+              %h2
+                = link_to post.title, post
+              %span.data
+                = I18n.l post.created_at.to_date
+            .description
+              = truncate post.conversation, :length => 80, :separator => ' '
