--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -1,7 +1,7 @@
 - title "Настройки профиля"
 
 %h1.form Настройки
-%span.head-note.block-inline Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+%span.head-note.block-inline 
 .b-settings-menu
   %ul
     %li.selected
@@ -16,7 +16,7 @@
     .column.column-f-x2
       = f.input :fullname, :label => 'Имя и фамилия'
       = f.input :city, :label => 'Город'      
-      = f.input :about, :label => 'О себе', :hint => 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
+      = f.input :about, :label => 'О себе', :hint => t('settings.profile.about_hint')
     .column.column-f-x1
       = f.input :picture, :as => :file, :label => 'Фотография'
       .b-userpic
