Search bar, static pages and RSS: Currently hidden

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -9,16 +9,16 @@
 .links
   %ul
     %li
-      %a{:href => "/"} О проекте
+      %a{:href => "#"} О проекте
     %li
-      %a{:href => "/"} Владельцам
+      %a{:href => "#"} Владельцам
     %li
-      %a{:href => "/"} Правила
+      %a{:href => "#"} Правила
     %li
-      %a{:href => "/"} Помощь
+      %a{:href => "#"} Помощь
 .others
   .rss
-    %a{:href => "/"}
+    %a{:href => "#"}
       RSS
       %i
   .counter
