--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -2,7 +2,7 @@
   .name
     .item.photo
       %span.round_picture{:style => "width: 50px; height: 50px;"}
-        = image_tag @user.picture.url(:normal), :width => 50, :height => 50
+        = link_to(image_tag(@user.picture.url(:normal), :width => 50, :height => 50), user_posts_path(@user))
     .item.info
       %strong
         = @user.fullname ? @user.fullname : @user.username
