Posts page if the user fields are nil yet

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -9,7 +9,7 @@
         %h3 
           Все параграфы пользователя
           %strong
-            = @posts.first.user.username
+            = @user.username
       - @posts.each do |post|
         .postPreview
           .image
