Updated Reformal.Ru partial

--- a/app/views/shared/_reformal.html
+++ b/app/views/shared/_reformal.html
@@ -1,4 +1,6 @@
 <script type="text/javascript"><!--
+reformal_wdg_w    = "713";
+reformal_wdg_h    = "460";
 reformal_wdg_domain    = "talks";
 reformal_wdg_mode    = 0;
 reformal_wdg_title   = "Talks";
@@ -15,9 +17,10 @@ reformal_wdg_vcolor  = "#9FCE54";
 reformal_wdg_cmline  = "#E0E0E0";
 reformal_wdg_glcolor  = "#105895";
 reformal_wdg_tbcolor  = "#FFFFFF";
+reformal_wdg_tcolor_aw4  = "#3F4543";
  
 reformal_wdg_bimage = "7688f5685f7701e97daa5497d3d9c745.png";
  //-->
 </script>
 
-<script type="text/javascript" language="JavaScript" src="http://widget.reformal.ru/tab6.js"></script><noscript><a href="http://talks.reformal.ru">Talks feedback </a> <a href="http://reformal.ru"><img src="http://reformal.ru/i/logo.gif" /></a></noscript>
+<script type="text/javascript" language="JavaScript" src="http://widget.reformal.ru/tabn2v4.js"></script><noscript><a href="http://talks.reformal.ru">Talks feedback</a> <a href="http://reformal.ru">на платформе <img src="http://widget.reformal.ru/i/reformal_ru.png" /></a></noscript>
