Modified Reformal.Ru partial

--- a/app/views/shared/_reformal.html
+++ b/app/views/shared/_reformal.html
@@ -7,7 +7,7 @@ reformal_wdg_title   = "Talks";
 reformal_wdg_ltitle  = "Оставьте свой отзыв";
 reformal_wdg_lfont   = "";
 reformal_wdg_lsize   = "";
-reformal_wdg_color   = "#e62024";
+reformal_wdg_color   = "#52ba8d";
 reformal_wdg_bcolor  = "#516683";
 reformal_wdg_tcolor  = "#FFFFFF";
 reformal_wdg_align   = "left";
