Added titles to Posts index and show pages

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,6 @@
-﻿.columns
+﻿- title "Все параграфы пользователя #{@user.username}"
+
+.columns
   .column.column-x2
     = render '/shared/sidebar'
     
