Added GA and Metrika counters

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,9 @@
 !!!
 %html{:lang => "en-US"}
   %head
-    = render "shared/meta"    
-  %body    
+    = render "shared/meta"
+    = render "shared/analytics"   
+  %body     
     = render "shared/admin_pane"
     #layout      
       #header
@@ -16,3 +17,4 @@
         = render "shared/footer"
         
     = render "shared/reformal"
+    = render "shared/metrika"    
