Yandex meta tag added

--- a/app/views/shared/_meta.html.haml
+++ b/app/views/shared/_meta.html.haml
@@ -19,3 +19,4 @@
                          "application.jquery"
                                                 
 = csrf_meta_tag
+%meta{:name => 'yandex-verification', :content => '448837f81d93d532'}
