--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = render "shared/analytics"   
   %body     
     = render "shared/admin_pane"
+    = render "shared/fb_root"
     #layout      
       #header
         = render "shared/header"
@@ -14,7 +15,7 @@
         = yield    
           
       #footer
-        = render "shared/footer"
+        = render "shared/footer"        
         
     = render "shared/reformal"
     = render "shared/metrika"    
