--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -678,7 +678,7 @@ body {
 }
 
 .p-post .b-share {
-    margin: .67em 0 1em 0;
+    margin: 1.67em 0 1em 0;
     white-space: nowrap;
     z-index: 99;
 }
