Added links to song code field hint

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -56,4 +56,4 @@
       = f.input :picture_author_link, :as => :url, :label => 'Ссылка на автора изображения'
       %hr/
       
-      = f.input :song_code, :label => 'Песня', :hint => t('post.song_code_hint')
+      = f.input :song_code, :label => 'Песня', :hint => t('post.song_code_hint_html')
