Post add formatting hint modified

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -18,8 +18,8 @@
             [Ссылка](
             = link_to 'http://t-a-l-k-s.com', 'http://t-a-l-k-s.com'
             )
-                        
-        .g-right
+        
+        .g-center
           %div
             %blockauote
               %p > цитата
@@ -31,6 +31,14 @@
             * каких-нибудь
             %br
             * строк
+            
+        .g-right
+          %div
+            Тире получится, если набрать два дефиса подряд.
+          %div
+            А для 
+            = link_to 'перевода строки', 'http://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4_%D1%81%D1%82%D1%80%D0%BE%D0%BA%D0%B8' 
+            нужно два раза нажать на пробел.
       
       = submit_button "Сохранить"
       
