Post formatting hint modified

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -38,7 +38,7 @@
           %div
             А для 
             = link_to 'перевода строки', 'http://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4_%D1%81%D1%82%D1%80%D0%BE%D0%BA%D0%B8' 
-            нужно два раза нажать на пробел.
+            нужно два раза нажать на пробел в конце строки.
       
       = submit_button "Сохранить"
       
