--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -34,7 +34,7 @@
       - if can? :manage, Applicant
         %li
           = link_to_unless_current "Заявки", applicants_path
-          %span= applicants_count($applicants)
+          %span= applicants_count
         
       - if current_user.invites_limit > 0
         %li= link_to_unless_current 'Пригласить друзей', new_invite_path
