--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -22,6 +22,6 @@
       RSS
       %i
   .counter
-    %img{:height => "15", :src => "/images/counter.gif", :width => "88"}/
+    = render "shared/liveinternet"    
 .cat
   %img{:alt => "Serious Cat", :height => "70", :src => "/images/cat-01.jpg", :width => "210"}/
